--- a/style-START.css
+++ b/style-START.css
@@ -72,6 +72,14 @@ h6 {
   text-align: center;
 }
 
+.button--small {
+  font-size: 1.5em;
+  padding: 2px 9px;
+  margin: 5px;
+  border-width: 1px;
+  border-radius: 2px;
+}
+
 .button:hover {
   background-color: lightgray;
 }
@@ -115,7 +123,7 @@ h6 {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  background-color: #1D1E22;
+  background-color: #1d1e22;
   box-sizing: border-box;
 }
 
@@ -126,16 +134,26 @@ h6 {
   line-height: 1;
   font-size: 1.4em;
   padding: 3px;
-  color: rgb(255,255,255, 0.6);
-  background-color: #1D1E22;
+  color: rgb(255, 255, 255, 0.6);
+  background-color: #1d1e22;
 }
 
 .editor__input {
   width: 100%;
   resize: none;
-  background-color: #1D1E22 ;
+  background-color: #1d1e22;
   color: white;
   border: none;
 }
 
+.preview {
+  width: 100%;
+  height: 49%;
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+}
 
+iframe {
+  flex: 1;
+}
