--- a/style-START.css
+++ b/style-START.css
@@ -80,6 +80,16 @@ h6 {
   border-radius: 2px;
 }
 
+.button--black {
+  font-size: 1.3em;
+  background: none;
+  border-right: 1px solid gray;
+  background-color: #2c303a;
+  padding: 8px;
+  border-radius: 0;
+  margin: 0;
+}
+
 .button:hover {
   background-color: lightgray;
 }
@@ -156,4 +166,13 @@ h6 {
 
 iframe {
   flex: 1;
+}
+
+.settings {
+  width: 100%;
+  display: flex;
+  height: 4%;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: #2c303a;
 }
