--- a/style-START.css
+++ b/style-START.css
@@ -41,7 +41,7 @@ h6 {
   align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
-  padding: 8px;
+  padding: 0 8px;
   background: #1e1f26;
 }
 
@@ -175,4 +175,23 @@ iframe {
   flex-direction: row;
   justify-content: flex-start;
   background-color: #2c303a;
+}
+
+@media only screen and (max-width: 68.75em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media only screen and (max-width: 48.75em) {
+  html {
+    font-size: 40%;
+  }
+
+}
+
+@media only screen and (max-width: 37.5em) {
+  html {
+    font-size: 30%;
+  }
 }
